--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Inline SVG Example</title>
+  <meta charset="UTF-8">
+  <title>Interactive Japan Map</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+    }
+
+    svg {
+      width: 80%;
+      max-width: 800px;
+      height: auto;
+      border: 1px solid #ccc;
+      margin-top: 20px;
+    }
+
+    /* Default prefecture style */
+    .prefecture {
+      fill: #e0e0e0;
+      stroke: #555;
+      stroke-width: 1;
+      transition: fill 0.2s, stroke 0.2s;
+      cursor: pointer;
+    }
+
+    /* Hover effect */
+    .prefecture:hover {
+      fill: #ffcc00;
+    }
+
+    /* Selected (clicked) style */
+    .selected {
+      fill: #0077ff !important;
+      stroke: #003366;
+      stroke-width: 2;
+    }
+
+    #info {
+      margin-top: 15px;
+      font-size: 1.2em;
+    }
+  </style>
 </head>
 <body>
   <h1>My Inline SVG</h1>
-<?xml version="1.0" encoding="utf-8"?>
+
 <svg class="geolonia-svg-map" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg">
   <title>Japanese Prefectures</title>
   <desc>Created by Geolonia (https://geolonia.com/).</desc>
@@ -228,5 +269,26 @@
     </g>
   </g>
 </svg>
+  <script>
+    const prefectures = document.querySelectorAll('.prefecture');
+    const info = document.getElementById('info');
+
+    prefectures.forEach(pref => {
+      pref.addEventListener('click', () => {
+        // Toggle selection
+        pref.classList.toggle('selected');
+
+        // Get prefecture name
+        const name = pref.querySelector('title').textContent;
+
+        // Show message
+        if (pref.classList.contains('selected')) {
+          info.textContent = `${name} selected!`;
+        } else {
+          info.textContent = `${name} deselected.`;
+        }
+      });
+    });
+  </script>
 </body>
 </html>
