--- a/index.html
+++ b/index.html
@@ -1,51 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Interactive Japan Map</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-    }
+<meta charset="UTF-8">
+<title>Interactive Japan Map - Color Editor</title>
+<style>
+  body {
+    font-family: sans-serif;
+    text-align: center;
+    background: #fafafa;
+  }
 
-    svg {
-      width: 80%;
-      max-width: 800px;
-      height: auto;
-      border: 1px solid #ccc;
-      margin-top: 20px;
-    }
+  .color-panel {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 20px 0;
+  }
 
-    /* Default prefecture style */
-    .prefecture {
-      fill: #e0e0e0;
-      stroke: #555;
-      stroke-width: 1;
-      transition: fill 0.2s, stroke 0.2s;
-      cursor: pointer;
-    }
+  .color-btn {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    cursor: pointer;
+    transition: transform 0.2s, border 0.2s;
+  }
 
-    /* Hover effect */
-    .prefecture:hover {
-      fill: #ffcc00;
-    }
+  .color-btn.active {
+    border: 3px solid black;
+    transform: scale(1.2);
+  }
 
-    /* Selected (clicked) style */
-    .selected {
-      fill: #0077ff !important;
-      stroke: #003366;
-      stroke-width: 2;
-    }
+  #color-counts {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    font-size: 1.1em;
+    margin-bottom: 15px;
+  }
 
-    #info {
-      margin-top: 15px;
-      font-size: 1.2em;
-    }
-  </style>
+  svg {
+    width: 80%;
+    max-width: 800px;
+    height: auto;
+    border: 1px solid #ccc;
+  }
+
+  .prefecture {
+    fill: #e0e0e0;
+    stroke: #555;
+    stroke-width: 1;
+    cursor: pointer;
+    transition: fill 0.2s, stroke 0.2s;
+  }
+
+  .prefecture:hover {
+    stroke: #000;
+  }
+</style>
 </head>
 <body>
-  <h1>My Inline SVG</h1>
+ 
+  <h1>Japan Map Color Editor</h1>
+  <p>1️⃣ Click a color → 2️⃣ Click a prefecture → 3️⃣ Color changes & counts update</p>
+
+  <!-- 🎨 Color buttons -->
+  <div class="color-panel" id="colorPanel">
+    <div class="color-btn" data-color="red" style="background:red"></div>
+    <div class="color-btn" data-color="blue" style="background:blue"></div>
+    <div class="color-btn" data-color="green" style="background:green"></div>
+    <div class="color-btn" data-color="yellow" style="background:gold"></div>
+    <div class="color-btn" data-color="purple" style="background:purple"></div>
+    <div class="color-btn" data-color="orange" style="background:orange"></div>
+  </div>
+
+  <!-- 🧮 Color counts -->
+  <div id="color-counts">
+    <span id="count-red">Red: 0</span>
+    <span id="count-blue">Blue: 0</span>
+    <span id="count-green">Green: 0</span>
+    <span id="count-yellow">Yellow: 0</span>
+    <span id="count-purple">Purple: 0</span>
+    <span id="count-orange">Orange: 0</span>
+  </div>
 
 <svg class="geolonia-svg-map" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg">
   <title>Japanese Prefectures</title>
@@ -269,26 +306,67 @@
     </g>
   </g>
 </svg>
-  <script>
-    const prefectures = document.querySelectorAll('.prefecture');
-    const info = document.getElementById('info');
+ <script>
+  const colorBtns = document.querySelectorAll('.color-btn');
+  const prefectures = document.querySelectorAll('.prefecture');
+  const counts = {
+    red: 0, blue: 0, green: 0, yellow: 0, purple: 0, orange: 0
+  };
 
-    prefectures.forEach(pref => {
-      pref.addEventListener('click', () => {
-        // Toggle selection
-        pref.classList.toggle('selected');
+  let activeColor = null;
 
-        // Get prefecture name
-        const name = pref.querySelector('title').textContent;
+  // 🔹 Update count display
+  function updateCounts() {
+    for (let color in counts) {
+      document.getElementById(`count-${color}`).textContent =
+        `${color.charAt(0).toUpperCase() + color.slice(1)}: ${counts[color]}`;
+    }
+  }
 
-        // Show message
-        if (pref.classList.contains('selected')) {
-          info.textContent = `${name} selected!`;
-        } else {
-          info.textContent = `${name} deselected.`;
-        }
-      });
+  // 🎨 Click color button
+  colorBtns.forEach(btn => {
+    btn.addEventListener('click', () => {
+      // Deselect all
+      colorBtns.forEach(b => b.classList.remove('active'));
+      // Select clicked color
+      if (activeColor === btn.dataset.color) {
+        activeColor = null; // Deselect if same color clicked again
+      } else {
+        btn.classList.add('active');
+        activeColor = btn.dataset.color;
+      }
     });
-  </script>
+  });
+
+  // 🗾 Click prefecture
+  prefectures.forEach(pref => {
+    pref.addEventListener('click', () => {
+      if (!activeColor) return; // No color selected
+
+      const currentColor = pref.dataset.color || null;
+
+      // If already has a color, decrease its count
+      if (currentColor && counts[currentColor] > 0) {
+        counts[currentColor]--;
+      }
+
+      // Apply new color
+      pref.style.fill = activeColor;
+      pref.dataset.color = activeColor;
+
+      // Increase new color count
+      counts[activeColor]++;
+
+      updateCounts();
+
+      // Deselect the active color
+      colorBtns.forEach(b => b.classList.remove('active'));
+      activeColor = null;
+    });
+  });
+
+  // Initial display
+  updateCounts();
+</script>
 </body>
 </html>
