--- a/index.html
+++ b/index.html
@@ -6,15 +6,45 @@
 <style>
   body {
     font-family: sans-serif;
-    text-align: center;
+    margin: 0;
     background: #fafafa;
+    display: flex;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  /* 🔹 Left control panel */
+  .sidebar {
+    width: 250px;
+    background: #f0f0f0;
+    border-right: 2px solid #ccc;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+  }
+
+  h1 {
+    font-size: 1.3em;
+    margin-top: 0;
+    text-align: center;
+  }
+
+  .instructions {
+    font-size: 0.9em;
+    color: #333;
+    text-align: center;
+    margin-bottom: 15px;
   }
 
   .color-panel {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-    margin: 20px 0;
+    justify-items: center;
+    margin-bottom: 20px;
   }
 
   .color-btn {
@@ -33,15 +63,47 @@
 
   #color-counts {
     display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-size: 0.95em;
+    margin-bottom: 20px;
+  }
+
+  #reset-btn {
+    background: #ff5555;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background 0.3s;
+  }
+
+  #reset-btn:hover {
+    background: #ff2222;
+  }
+
+  #selected-pref {
+    margin-top: 15px;
+    font-size: 1em;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  /* 🔸 Map area */
+  .map-area {
+    flex-grow: 1;
+    display: flex;
     justify-content: center;
-    gap: 15px;
-    font-size: 1.1em;
-    margin-bottom: 15px;
+    align-items: center;
+    overflow: auto;
+    background: #fff;
   }
 
   svg {
     width: 80%;
-    max-width: 800px;
+    max-width: 900px;
     height: auto;
     border: 1px solid #ccc;
   }
@@ -60,30 +122,41 @@
 </style>
 </head>
 <body>
- 
-  <h1>Japan Map Color Editor</h1>
-  <p>1️⃣ Click a color → 2️⃣ Click a prefecture → 3️⃣ Color changes & counts update</p>
 
-  <!-- 🎨 Color buttons -->
-  <div class="color-panel" id="colorPanel">
-    <div class="color-btn" data-color="red" style="background:red"></div>
-    <div class="color-btn" data-color="blue" style="background:blue"></div>
-    <div class="color-btn" data-color="green" style="background:green"></div>
-    <div class="color-btn" data-color="yellow" style="background:gold"></div>
-    <div class="color-btn" data-color="purple" style="background:purple"></div>
-    <div class="color-btn" data-color="orange" style="background:orange"></div>
+  <!-- 🔹 Left panel -->
+  <div class="sidebar">
+    <h1>Japan Map Color Editor</h1>
+    <p class="instructions">1️⃣ Click a color → 2️⃣ Click a prefecture → 3️⃣ Color it!</p>
+
+    <!-- 🎨 Color buttons -->
+    <div class="color-panel" id="colorPanel">
+      <div class="color-btn" data-color="red" style="background:red"></div>
+      <div class="color-btn" data-color="blue" style="background:blue"></div>
+      <div class="color-btn" data-color="green" style="background:green"></div>
+      <div class="color-btn" data-color="yellow" style="background:gold"></div>
+      <div class="color-btn" data-color="purple" style="background:purple"></div>
+      <div class="color-btn" data-color="orange" style="background:orange"></div>
+    </div>
+
+    <!-- 🧮 Color counts -->
+    <div id="color-counts">
+      <span id="count-red">Red: 0</span>
+      <span id="count-blue">Blue: 0</span>
+      <span id="count-green">Green: 0</span>
+      <span id="count-yellow">Yellow: 0</span>
+      <span id="count-purple">Purple: 0</span>
+      <span id="count-orange">Orange: 0</span>
+    </div>
+
+    <!-- 🔁 Reset button -->
+    <button id="reset-btn">Reset All</button>
+
+    <!-- 🏷️ Prefecture info -->
+    <div id="selected-pref">No prefecture selected yet.</div>
   </div>
 
-  <!-- 🧮 Color counts -->
-  <div id="color-counts">
-    <span id="count-red">Red: 0</span>
-    <span id="count-blue">Blue: 0</span>
-    <span id="count-green">Green: 0</span>
-    <span id="count-yellow">Yellow: 0</span>
-    <span id="count-purple">Purple: 0</span>
-    <span id="count-orange">Orange: 0</span>
-  </div>
-
+  <!-- 🗾 Map area -->
+  <div class="map-area">
 <svg class="geolonia-svg-map" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg">
   <title>Japanese Prefectures</title>
   <desc>Created by Geolonia (https://geolonia.com/).</desc>
@@ -306,9 +379,11 @@
     </g>
   </g>
 </svg>
- <script>
+<script>
   const colorBtns = document.querySelectorAll('.color-btn');
   const prefectures = document.querySelectorAll('.prefecture');
+  const info = document.getElementById('selected-pref');
+  const resetBtn = document.getElementById('reset-btn');
   const counts = {
     red: 0, blue: 0, green: 0, yellow: 0, purple: 0, orange: 0
   };
@@ -326,11 +401,9 @@
   // 🎨 Click color button
   colorBtns.forEach(btn => {
     btn.addEventListener('click', () => {
-      // Deselect all
       colorBtns.forEach(b => b.classList.remove('active'));
-      // Select clicked color
       if (activeColor === btn.dataset.color) {
-        activeColor = null; // Deselect if same color clicked again
+        activeColor = null;
       } else {
         btn.classList.add('active');
         activeColor = btn.dataset.color;
@@ -341,31 +414,40 @@
   // 🗾 Click prefecture
   prefectures.forEach(pref => {
     pref.addEventListener('click', () => {
-      if (!activeColor) return; // No color selected
+      const name = pref.querySelector('title').textContent;
+      info.textContent = `Selected: ${name}`;
+
+      if (!activeColor) return;
 
       const currentColor = pref.dataset.color || null;
-
-      // If already has a color, decrease its count
       if (currentColor && counts[currentColor] > 0) {
         counts[currentColor]--;
       }
 
-      // Apply new color
       pref.style.fill = activeColor;
       pref.dataset.color = activeColor;
-
-      // Increase new color count
       counts[activeColor]++;
 
       updateCounts();
 
-      // Deselect the active color
       colorBtns.forEach(b => b.classList.remove('active'));
       activeColor = null;
     });
   });
 
-  // Initial display
+  // 🔁 Reset button
+  resetBtn.addEventListener('click', () => {
+    prefectures.forEach(pref => {
+      pref.style.fill = '#e0e0e0';
+      delete pref.dataset.color;
+    });
+    for (let color in counts) counts[color] = 0;
+    updateCounts();
+    info.textContent = 'All colors cleared.';
+    activeColor = null;
+    colorBtns.forEach(b => b.classList.remove('active'));
+  });
+
   updateCounts();
 </script>
 </body>
