--- a/index.html
+++ b/index.html
@@ -2,115 +2,159 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Japan Map Coloring Game</title>
+<title>Interactive Japan Map - Color Editor</title>
 <style>
   body {
+    font-family: sans-serif;
     margin: 0;
+    background: #fafafa;
     display: flex;
     height: 100vh;
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-  }
-
-  /* Sidebar for controls */
-  .sidebar {
-    width: 200px;
-    background-color: #fff;
-    padding: 15px;
-    box-shadow: 2px 0 8px rgba(0,0,0,0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .colors {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .color-button {
-    border: none;
-    height: 30px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: transform 0.2s;
-  }
-
-  .color-button:hover {
-    transform: scale(1.1);
-  }
-
-  .color-button.active {
-    outline: 3px solid black;
-    transform: scale(1.1);
-  }
-
-  .counter {
-    font-size: 14px;
-    margin-top: 5px;
-  }
-
-  .reset-btn {
-    padding: 10px;
-    border: none;
-    background-color: #ff5555;
-    color: white;
-    border-radius: 5px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background 0.3s;
-  }
-
-  .reset-btn:hover {
-    background-color: #ff3333;
-  }
-
-  /* SVG container */
-  .map-container {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     overflow: hidden;
   }
 
-  svg {
-    width: 90%;
-    height: auto;
-    max-height: 100%;
-    transition: all 0.3s;
+  /* 🔹 Left control panel */
+  .sidebar {
+    width: 250px;
+    background: #f0f0f0;
+    border-right: 2px solid #ccc;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
   }
 
-  svg path {
-    stroke: #333;
-    stroke-width: 0.5;
+  h1 {
+    font-size: 1.3em;
+    margin-top: 0;
+    text-align: center;
+  }
+
+  .instructions {
+    font-size: 0.9em;
+    color: #333;
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
+  .color-panel {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    justify-items: center;
+    margin-bottom: 20px;
+  }
+
+  .color-btn {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 3px solid transparent;
     cursor: pointer;
-    transition: fill 0.2s;
+    transition: transform 0.2s, border 0.2s;
   }
 
-  svg path:hover {
-    opacity: 0.8;
+  .color-btn.active {
+    border: 3px solid black;
+    transform: scale(1.2);
   }
 
+  #color-counts {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-size: 0.95em;
+    margin-bottom: 20px;
+  }
+
+  #reset-btn {
+    background: #ff5555;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background 0.3s;
+  }
+
+  #reset-btn:hover {
+    background: #ff2222;
+  }
+
+  #selected-pref {
+    margin-top: 15px;
+    font-size: 1em;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  /* 🔸 Map area */
+  .map-area {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    background: #fff;
+  }
+
+  svg {
+    width: 80%;
+    max-width: 900px;
+    height: auto;
+    max-height: 90%;
+    border: 1px solid #ccc;
+  }
+
+  .prefecture {
+    fill: #e0e0e0;
+    stroke: #555;
+    stroke-width: 1;
+    cursor: pointer;
+    transition: fill 0.2s, stroke 0.2s;
+  }
+
+  .prefecture:hover {
+    stroke: #000;
+  }
 </style>
 </head>
 <body>
 
-<div class="sidebar">
-  <div>
-    <h3>Colors</h3>
-    <div class="colors" id="colorButtons"></div>
-  </div>
+  <!-- 🔹 Left panel -->
+  <div class="sidebar">
+    <h1>Japan Map Color Editor</h1>
+    <p class="instructions">1️⃣ Click a color → 2️⃣ Click a prefecture → 3️⃣ Color it!</p>
 
-  <div>
-    <h3>Counters</h3>
-    <div id="colorCounters"></div>
-  </div>
+    <!-- 🎨 Color buttons -->
+    <div class="color-panel" id="colorPanel">
+      <div class="color-btn" data-color="red" style="background:red"></div>
+      <div class="color-btn" data-color="blue" style="background:blue"></div>
+      <div class="color-btn" data-color="green" style="background:green"></div>
+      <div class="color-btn" data-color="yellow" style="background:gold"></div>
+      <div class="color-btn" data-color="purple" style="background:purple"></div>
+      <div class="color-btn" data-color="orange" style="background:orange"></div>
+    </div>
 
-  <button class="reset-btn" id="resetBtn">Reset All</button>
-</div>
+    <!-- 🧮 Color counts -->
+    <div id="color-counts">
+      <span id="count-red">Red: 0</span>
+      <span id="count-blue">Blue: 0</span>
+      <span id="count-green">Green: 0</span>
+      <span id="count-yellow">Yellow: 0</span>
+      <span id="count-purple">Purple: 0</span>
+      <span id="count-orange">Orange: 0</span>
+    </div>
+
+    <!-- 🔁 Reset button -->
+    <button id="reset-btn">Reset All</button>
+
+    <!-- 🏷️ Prefecture info -->
+    <div id="selected-pref">No prefecture selected yet.</div>
+  </div>
 
 <div class="map-container">
 <svg class="geolonia-svg-map" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg">
@@ -336,75 +380,75 @@
   </g>
 </svg>
 <script>
-const colors = ["#ff6666", "#66b3ff", "#66ff66", "#ffff66", "#ffb366", "#cc99ff"];
-const colorButtonsContainer = document.getElementById("colorButtons");
-const colorCountersContainer = document.getElementById("colorCounters");
-const map = document.getElementById("japan-map");
-const resetBtn = document.getElementById("resetBtn");
+  const colorBtns = document.querySelectorAll('.color-btn');
+  const prefectures = document.querySelectorAll('.prefecture');
+  const info = document.getElementById('selected-pref');
+  const resetBtn = document.getElementById('reset-btn');
+  const counts = {
+    red: 0, blue: 0, green: 0, yellow: 0, purple: 0, orange: 0
+  };
 
-let activeColor = null;
-let colorCounts = {};
-colors.forEach(c => colorCounts[c] = 0);
+  let activeColor = null;
 
-// Create color buttons
-colors.forEach(color => {
-  const btn = document.createElement("button");
-  btn.className = "color-button";
-  btn.style.backgroundColor = color;
-  btn.addEventListener("click", () => selectColor(color, btn));
-  colorButtonsContainer.appendChild(btn);
-});
-
-// Create counters
-function updateCounters() {
-  colorCountersContainer.innerHTML = "";
-  colors.forEach(color => {
-    const div = document.createElement("div");
-    div.className = "counter";
-    div.innerHTML = `<span style="color:${color}; font-weight:bold;">●</span> ${colorCounts[color]}`;
-    colorCountersContainer.appendChild(div);
-  });
-}
-updateCounters();
-
-// Handle color selection
-function selectColor(color, btn) {
-  document.querySelectorAll(".color-button").forEach(b => b.classList.remove("active"));
-  if (activeColor === color) {
-    activeColor = null;
-  } else {
-    activeColor = color;
-    btn.classList.add("active");
-  }
-}
-
-// Handle map click
-map.querySelectorAll("path").forEach(region => {
-  region.addEventListener("click", () => {
-    if (!activeColor) return;
-    const prevColor = region.getAttribute("fill");
-    if (prevColor && colors.includes(prevColor)) {
-      colorCounts[prevColor]--;
+  // 🔹 Update count display
+  function updateCounts() {
+    for (let color in counts) {
+      document.getElementById(`count-${color}`).textContent =
+        `${color.charAt(0).toUpperCase() + color.slice(1)}: ${counts[color]}`;
     }
-    region.setAttribute("fill", activeColor);
-    colorCounts[activeColor]++;
-    updateCounters();
+  }
 
-    // Deselect color after use
-    activeColor = null;
-    document.querySelectorAll(".color-button").forEach(b => b.classList.remove("active"));
+  // 🎨 Click color button
+  colorBtns.forEach(btn => {
+    btn.addEventListener('click', () => {
+      colorBtns.forEach(b => b.classList.remove('active'));
+      if (activeColor === btn.dataset.color) {
+        activeColor = null;
+      } else {
+        btn.classList.add('active');
+        activeColor = btn.dataset.color;
+      }
+    });
   });
-});
 
-// Reset button
-resetBtn.addEventListener("click", () => {
-  map.querySelectorAll("path").forEach(region => region.setAttribute("fill", "#ddd"));
-  Object.keys(colorCounts).forEach(c => colorCounts[c] = 0);
-  updateCounters();
-  activeColor = null;
-  document.querySelectorAll(".color-button").forEach(b => b.classList.remove("active"));
-});
+  // 🗾 Click prefecture
+  prefectures.forEach(pref => {
+    pref.addEventListener('click', () => {
+      const name = pref.querySelector('title').textContent;
+      info.textContent = `Selected: ${name}`;
 
+      if (!activeColor) return;
+
+      const currentColor = pref.dataset.color || null;
+      if (currentColor && counts[currentColor] > 0) {
+        counts[currentColor]--;
+      }
+
+      pref.style.fill = activeColor;
+      pref.dataset.color = activeColor;
+      counts[activeColor]++;
+
+      updateCounts();
+
+      colorBtns.forEach(b => b.classList.remove('active'));
+      activeColor = null;
+    });
+  });
+
+  // 🔁 Reset button
+  resetBtn.addEventListener('click', () => {
+    prefectures.forEach(pref => {
+      pref.style.fill = '#e0e0e0';
+      delete pref.dataset.color;
+    });
+    for (let color in counts) counts[color] = 0;
+    updateCounts();
+    info.textContent = 'All colors cleared.';
+    activeColor = null;
+    colorBtns.forEach(b => b.classList.remove('active'));
+  });
+
+  updateCounts();
 </script>
 </body>
 </html>
