--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
 </head>
 
 <body>
-  <!-- 🔹 Left panel -->
+  <!-- Left panel -->
   <div class="sidebar">
     <h1>King of Japan!</h1>
     <p class="instructions">1️⃣ Click a color → 2️⃣ Click a prefecture → 3️⃣ Color it!</p>
 
-    <!-- 🎨 Color buttons -->
+    <!-- Color buttons -->
     <div class="color-panel" id="colorPanel">
       <div class="color-btn" data-color="red" style="background:red"></div>
       <div class="color-btn" data-color="blue" style="background:blue"></div>
@@ -169,7 +169,7 @@
       <div class="color-btn" data-color="orange" style="background:orange"></div>
     </div>
 
-    <!-- 🧮 Color counts -->
+    <!-- Color counts -->
     <div id="color-counts">
       <span id="count-red">Red: 0</span>
       <span id="count-blue">Blue: 0</span>
@@ -179,21 +179,21 @@
       <span id="count-orange">Orange: 0</span>
     </div>
 
-    <!-- 🔁 Reset buttons -->
+    <!-- Reset buttons -->
     <button id="reset-btn">Reset All</button>
     <button id="reset-one-btn">Reset One Prefecture</button>
 
-    <!-- 🏷️ Prefecture info -->
+    <!-- Prefecture info -->
     <div id="selected-pref">No prefecture selected yet.</div>
 
-    <!-- 📋 Uncolored list -->
+    <!-- Uncolored list -->
     <div id="uncolored-section">
       <button id="toggle-uncolored">Show Uncolored Prefectures</button>
       <div id="uncolored-list"></div>
     </div>
   </div>
 
-  <!-- 🔸 Map area -->
+  <!-- Map area -->
   <div class="map-container">
     <svg class="geolonia-svg-map" viewBox="0 0 1000 1000" xmlns="http://www.w3.org/2000/svg">
   <title>Japanese Prefectures</title>
@@ -437,7 +437,7 @@
       updateUncoloredList();
     }
 
-    // 🎨 Click color button
+    // Click color button
     colorBtns.forEach(btn => {
       btn.addEventListener('click', () => {
         colorBtns.forEach(b => b.classList.remove('active'));
@@ -451,13 +451,13 @@
       });
     });
 
-    // 🗾 Click prefecture
+    // Click prefecture
     prefectures.forEach(pref => {
       pref.addEventListener('click', () => {
         const name = pref.querySelector('title').textContent;
         info.textContent = `Selected: ${name}`;
 
-        // 🔸 Reset one prefecture mode
+        // Reset one prefecture mode
         if (resetMode) {
           const currentColor = pref.dataset.color;
           if (currentColor && counts[currentColor] > 0) {
@@ -487,7 +487,7 @@
       });
     });
 
-    // 🔁 Reset All
+    // Reset All
     resetBtn.addEventListener('click', () => {
       prefectures.forEach(pref => {
         pref.style.fill = '#e0e0e0';
@@ -502,7 +502,7 @@
       resetOneBtn.classList.remove('active');
     });
 
-    // 🔹 New: Reset One Mode toggle
+    // Reset One Mode toggle
     resetOneBtn.addEventListener('click', () => {
       resetMode = !resetMode;
       resetOneBtn.classList.toggle('active', resetMode);
@@ -513,7 +513,7 @@
         : 'Reset One mode off.';
     });
 
-    // 🔹 New: Uncolored prefectures list
+    // Uncolored prefectures list
     const toggleUncolored = document.getElementById('toggle-uncolored');
     const uncoloredList = document.getElementById('uncolored-list');
 
